# gencmpclient

./: .gitignore  .gitmodules  AK_README.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  EXPORT.yml  ISSUE_TEMPLATE.md  LICENSE  MAINTAINERS  Makefile  Makefile.mk  Makefile_src  Makefile_tests  Makefile_v1  OpenSSL_version.c  OpenSSL_version.mk  PULL_REQUEST_TEMPLATE.md  Pod2Man  README.md  README_Central_Key_Generation.md  ReadMe_OSS.md  SECURITY.md  SUPPORT.md  credentials  debian_changelog.in  debian_control.in  did.sh  doCr.sh  doCrWithRat.sh  doGenm.sh  env.sh  libgencmp.pc.in  runMock.sh
.github/workflows/: OpenSSL_master-PQC.yml  OpenSSL_versions.yml  build.yml  ejbca-test.yml  mac-compatability.yml  mac-compatibility.yml  macos.yml  quality_check_sonarcloud.yml  sonar-project.properties  static-analysis-sonarcloud.yml  static-analysis.yml  version_compatability.yml  windows.yml
certs/crls/: PPKIPlaygroundECCRootCAv10.crl  PPKIPlaygroundInfrastructureIssuingCAv10.crl  PPKIPlaygroundInfrastructureRootCAv10.crl
certs/trusted/: PPKIPlaygroundECCRootCAv10.crt  PPKIPlaygroundECCRootCAv10.crt~
config/: Configuration.xsd  ConformanceTest.xml  EJBCA.env  EJBCA_docker.env  TestConfig.xml  ckg.cnf  demo.cnf  demo_EJBCA.cnf  empty.env  profile.cnf  setup-swtpm.sh  tests.cnf  tests.yaml  tests.yml
creds/: CMP_CA_Chain.pem  CMP_EE_Chain.pem  CMP_EE_Chain_RSA.pem  CMP_EE_Key.pem  CMP_EE_Key_RSA.pem  CMP_EE_Keystore.p12  ENROLL_Chain.pem  PPKI_Playground_CMP.p12  PPKI_Playground_RSARootCAv10.crt  PPKI_Playground_TLS.p12  insta.priv.pem  insta_ca_cert.pem  insta_client.p12  ppki_playground_cmp_signer.p12  ppki_playground_tls.p12
creds/crls/: InstaDemoCA.crl  PPKIPlaygroundInfrastructureRootCAv10.crl
creds/docker/: CMP_ISSUING_CA.pem  CMP_ROOTCA.pem  CUSTOMER_ISSUING_CA.pem  CUSTOMER_ROOTCA.pem  Docker_Playground_CMP.p12  Docker_Playground_CMP.pem  Docker_Playground_TLS.p12  Docker_Playground_TLS.pem  TLS_ROOTCA.pem
creds/trusted/: CMP_LRA_DOWNSTREAM_EE.pem  CloudCA_Root_v2.crt  InstaDemoCA.crt  Manufacturer_Root_CA.crt  PPKIPlaygroundECCRootCAv20.crt  PPKIPlaygroundInfrastructureRootCAv10.crt  PPKIPlaygroundInfrastructureRootCAv20.crt  PPKIPlaygroundMLDSARootCAv10.crt  PPKIPlaygroundRSARootCAv20.crt
debian/: changelog  cmpclient.install  cmpclient.lintian-overrides  control  copyright  libgencmp-dev.install  libgencmp.install  libgencmp.lintian-overrides  libgencmp2.install  libgencmpcl-dev.install  libgencmpcl.install  rules
debian/source/: options
doc/: Generic_CMP_client_API.odt  Generic_CMP_client_API_software_stack.pptx  Generic_CMP_client_API_v1.3-pre.docx  Generic_CMP_client_API_v1.4.docx  Generic_CMP_client_API_v1.4pre.docx  Generic_CMP_client_API_v1.5.docx  Generic_CMP_client_API_v1.6.docx  OpenSSL_CMP-and-generic_CMP_client_overview.pptx  cmpClient-cli.md  cmpClient-cli.pod  cmpClient.pod
include/: cmp_int.h  genericCMPClient.h  genericCMPClient_config.h  genericCMPClient_config.h.in  genericCMPClient_util.h  operators.h
src/: Makefile  cmpClient.c  cmpClientDemo.c  credential_loading.c  credential_loading.h  creds.c  creds.h  genericCMPClient.c  genericCMPClient.h  genericCMPClient_util.c
test/: 81-test_cmp_cli.t  test_cmp_cli.pl
test/CmpWsRa/: EJBCACMPSignerTLS.p12  signerWrong_keyusage.p12  signer_expired.crt
test/SimpleLra/: EJBCACMPSignerTLS.crt  EJBCACMPSignerTLS.key.pem  EJBCAInfrastructureIssuingCAv10.crt  signer.crt  signer.p12  signerOnly.crt  signerWrongChain.crt  signerWrong_keyID_old.crt
test/certs/: mkcert.sh
test/cmpossl/recipes/: 80-test_cmp_http.t  81-test_cmp_cli.t
test/cmpossl/recipes/80-test_cmp_http_data/: test_certstatus.csv  test_commands.csv  test_config.cnf  test_connection.csv  test_credentials.csv  test_enrollment.csv  test_verification.csv
test/cmpossl/recipes/80-test_cmp_http_data/Simple/: EJBCACMPSignerIntermediate.p12  EJBCACMPSignerIntermediate.pem  EJBCACMPSignerTLS.crt  EJBCACMPSignerTLS.key.pem  EJBCACMPSignerTLS.p12  EJBCACMPSigner_expired.pem  big_server.crt  issuing.crt  root.crt  server_wrong_keyusage.p12  server_wrong_keyusage.pem  signer.crt  tls_trusted.pem  tls_trusted_expired.pem
test/cmpossl/recipes/81-test_cmp_cli_data/: test_certstatus.csv  test_commands.csv  test_config.cnf  test_connection.csv  test_credentials.csv  test_enrollment.csv  test_verification.csv
test/cmpossl/recipes/81-test_cmp_cli_data/Simple/: EJBCACMPSignerTLS.pem  EJBCACMPSigner_expired.p12  big_issuing.crt  big_server.crt  csr.pem  server.crt
test/cmpossl/recipes/81-test_cmp_cli_data/SimpleLra/: EJBCACMPSignerTLS.crt  EJBCACMPSignerTLS.p12  big__root.crt  signer.p12  signerWrong.crt  signerWrong.key  signerWrong.p12  (+3 more)
test/recipes/: 80-test_cmp_http.t
test/recipes/80-test_cmp_http_data/: test.cnf  test_certstatus.csv  test_commands.csv  test_config.cnf  test_connection.csv  test_credentials.csv  test_enrollment.csv  test_verification.csv
test/recipes/80-test_cmp_http_data/EJBCA/: big_signer.crt  server_wrong_keyusage.crt
test/recipes/80-test_cmp_http_data/Insta/: big_issuing.crt  big_root.crt  big_signer.crt  big_trusted.crt  csr.pem  signer.crt  signer.p12  signerWrongChain.crt  signer_only.crt
test/recipes/80-test_cmp_http_data/LwCmp/: big_root.crt  big_server.crt  big_trusted.crt  issuing.crt  new.key  new_pass_12345.key  root.crt  server.crt  server_root.crt  signer.crt  signer.key  signer.p12  signer_only.crt  signer_root.crt  trusted.crt  wrong.crl
test/recipes/80-test_cmp_http_data/Mock/: big_issuing.crt  big_root.crt  big_trusted.crt  kem.crt  kem.key  oldWithOld.pem  server.cnf  setup-mock.sh  signer_no_SKID.crt  signer_only.crt  wrong.crl
test/recipes/80-test_cmp_http_data/Simple/: EJBCACMPSignerTLS.pem  EJBCACMPSignerTLS_expired.p12  EJBCACMPSignerTLS_expired.pem  csr.pem  root.crt  server.crt  server_root.crt  signer_chain.crt  testCA.crt  tls.key  tls.p12  tls_expired.pem  trusted.crt
test/results/: EE01.pcap  EE02.pcap  EE03.pcap  EE04.pcap  EE09.pcap  EE10.pcap  RA11.pcap
test/util/: shlib_wrap.sh
usr/: README
util/: shlib_wrap.sh
util/perl/OpenSSL/: Test.pm
